<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="false"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#120F25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/upToButton"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/InputTo"
        app:layout_constraintTop_toBottomOf="@+id/InputFrom"
        app:layout_constraintVertical_bias="0.274"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="339dp"
        android:layout_height="169dp"
        android:contentDescription="@string/title"
        android:focusable="auto"
        android:src="@drawable/titolo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.028"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/labelFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/from"
        android:textAllCaps="true"
        android:textColor="#CDDC39"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/labelTo"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/to"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#CDDC39"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFrom"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="174dp"
        android:layout_height="73dp"
        android:text="@string/generate"
        app:backgroundTint="#BF2929"
        app:layout_constraintBottom_toTopOf="@+id/labelNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.876" />

    <TextView
        android:id="@+id/labelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTo"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/InputFrom"
        android:layout_width="171dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#7E7272"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@+id/labelFrom"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/InputTo"
        android:layout_width="171dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#7E7272"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toEndOf="@+id/labelTo"
        app:layout_constraintTop_toBottomOf="@+id/InputFrom"
        app:layout_constraintVertical_bias="0.074" />

    <ImageButton
        android:id="@+id/upFromButton"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toTopOf="@+id/InputTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/InputFrom"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.256"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/downFromButton"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toTopOf="@+id/InputTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/InputFrom"
        app:layout_constraintTop_toBottomOf="@+id/upFromButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/downToButton"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/InputTo"
        app:layout_constraintTop_toBottomOf="@+id/upToButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/arrow_down_float" />

</androidx.constraintlayout.widget.ConstraintLayout>